# wasm-kernel

./: .gitignore  .gitmodules  Cargo.toml  README.md  TODO.md  build.rs
.cargo/: config.toml
.vim/: coc-settings.json
buildtool/: Cargo.toml
buildtool/src/: main.rs
buildtool/src/debug/: dwarf.rs  io.rs  mod.rs  util.rs
flanterm/: Cargo.toml  build.rs
flanterm/src/: bindings.rs  lib.rs
proc-macros/src/: lib.rs
resources/: limine.conf  linker-x86_64.lds
src/: cmdline.rs  main.rs  mp.rs  sync.rs  tty.rs
src/arch/: mod.rs
src/arch/x86_64/: dt.rs  interrupt.rs  mod.rs  mp.rs  paging.rs  serial.rs  unwind.rs
src/cmdline/: lexer.rs  mod.rs  parse.rs
src/log/: ansi.rs  flanterm.rs  init.rs  log.rs  mod.rs  options.rs
src/mem/: init.rs  malloc.rs  mod.rs  pmm.rs  requests.rs  types.rs  vpa.rs
src/modules/: mod.rs  symbols.rs
src/tty/: flanterm.rs  mod.rs
