[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"

[package]
name = "wasm-kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "2.10.0"
derive_more = { version = "2.0.1", default-features = false, features = ["add_assign", "add", "constructor"] }
flanterm = { version = "0.1.0", path = "flanterm" }
limine = "0.5.0"
spin = "0.10.0"
static_cell = "2.1.1"
x86 = "0.52.0"

[workspace]
members = ["buildtool", "flanterm"]

[[bin]]
name = "wasm-kernel"
test = false
bench = false
