[package]
name = "buildtool"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"] }
cargo_metadata = "0.23.0"
clap = { version = "4.5.51", features = ["derive"] }
fatfs = "0.3.6"
fscommon = "0.1.1"
gptman = "2.0.1"
reqwest = { version = "0.11", features = ["blocking"] }
tempfile = "3.23.0"
uuid = { version = "1.18.1", features = ["v4"] }
